--- a/styles/results.css
+++ b/styles/results.css
@@ -1,3 +1,24 @@
+@keyframes fadeOut {
+    from {opacity: 1; transform: translateY(0);}
+    to {opacity:0; transform: translateY(-20px)};
+}
+
+@keyframes fadeIn {
+    from {opacity: 0; transform: translateY(20px);}
+    to {opacity: 1; transform: translateY(0);}
+}
+
+@keyframes popIn {
+    0% {opacity: 0; transform: scale(0.5);}
+    70% {
+        transform: scale(1.1);
+    }
+    100% {
+        opacity: 1; transform: scale(1);
+    }
+}
+
+
 .results {
     display: flex;
     flex-direction: column;
@@ -7,6 +28,8 @@
 
     gap: 40px;
     margin-top: 71px;
+    opacity: 0;
+    animation: fadeIn 0.6s ease forwards;
 
 
     & h3 {
@@ -15,6 +38,9 @@
         font-size: 20px;
         line-height: 150%;
         text-transform: uppercase;
+        opacity: 0;
+        animation: fadeIn 0.5s ease forwards;
+        animation-delay: 0.2s;
     }
     
     & p {
@@ -24,6 +50,9 @@
         line-height: 150%;
         color: var(--content-secondary);
         text-transform: uppercase;
+        opacity: 0;
+        animation: fadeIn 0.5s ease forwards;
+        animation-delay: 0.4s;
     }
 }
 
@@ -33,6 +62,10 @@
 
     gap: 16px;
 
+    opacity: 0;
+    animation: fadeIn 0.5s ease forwards;
+    animation-delay: 0.6s; ;
+
     & .number {
         color: var(--content-brand);
 
@@ -41,7 +74,16 @@
         font-family: 'Roboto Mono';
         font-weight: 600;
         font-size: 48px;
+
+        opacity: 0;
+        animation: popIn 0.6s ease forwards;
     }
+}
+
+.btn.new-draw {
+    opacity: 0;
+    animation: fadeIn 0.5s ease forwards;
+    animation-delay: 1.2s;
 }
 
 .toggle {
