--- a/styles/results.css
+++ b/styles/results.css
@@ -59,6 +59,10 @@
 .numbers-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+
+    align-items: center;
+    justify-content: center;
 
     gap: 16px;
 
